[package]
name = "milston"
description = "Library for creating Project management apps"
version = "0.2.0"
authors = ["José Miguel Sarasola<alosarjos@gmail.com>"]
homepage = "https://gitlab.com/alosarjos/milston"
repository = "https://gitlab.com/alosarjos/milston"
license = "MIT"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Config & Data system dirs
directories = { version = "4.0" }

# Http data provider
reqwest = { version = "0.11", optional = true }

# Url struct
url = { version = "2.2", features = ["serde"], optional = true }

#DateTime
chrono = { version = "0.4", features = ["serde"] } 

[dev-dependencies]
tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread"] }

[features]
http = ["dep:reqwest", "dep:url"] 
full = ["http"]